# simple_modbus

./: Cargo.toml  LICENSE  Readme.md
.github/workflows/: rust.yml
src/: client.rs  config.rs  lib.rs  main.rs  serial.rs  stream.rs  transport.rs
