[package]
name = "simple_modbus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
byteorder = "1.4.3"
bytes = "1.1.0"
log = "0.4.14"
nom = "7.1.0"
serialport = "4.0.1"
smallvec = "1.8.0"

[features]
default = ["rtu"]
rtu = []
tcp = []
