[package]
name = "simple_modbus"
version = "0.1.1"
edition = "2021"
authors = ["imxood@gmail.com"]
description = "A tool to search files"
readme = "Readme.md"
homepage = "https://github.com/imxood/simple_modbus"
repository = "https://github.com/imxood/simple_modbus"
keywords = ["hardware", "modbus"]
license = "MIT"

[dependencies]
anyhow = "1.0.53"
bytes = "1.1.0"
log = "0.4.14"
serialport = "4.0.1"

[dev-dependencies]
env_logger = "0.9.0"
